cmake_minimum_required(VERSION 3.20)
project(untitled)

set(CMAKE_CXX_STANDARD 14)


add_executable(untitled Solution.cpp
        main.cpp
        singleNumber.cpp
        maxprofit.cpp
        passThePillow.cpp
        minOperations.cpp
        nextBeautifulNumber.cpp
        StockPrice.cpp
        maxTwoEvents.cpp
        threeSum.cpp
        diameterOfBinaryTree.cpp
        minIncrementForUnique.cpp
        isPalindrome.cpp
        hasCycle.cpp
        detectCycle.cpp
        deckRevealedIncreasing.cpp
        distributeCookies.cpp
        removeNthFromEnd.cpp
        swapPairs.cpp
        reverseKGroup.cpp
        subarraySum.cpp
        rotate.cpp
        maxSlidingWindow.cpp
)
